--- a/lesson-01-cat-photo-app/topic-08-img-tag-src.html
+++ b/lesson-01-cat-photo-app/topic-08-img-tag-src.html
@@ -1,3 +1,6 @@
+<!-- inside HTML tag called attribute -->
+<!-- property use for object -->
+
 <html>
   <body>
     <main>
@@ -5,7 +8,10 @@
       <h2>Cat Photos</h2>
       <!-- TODO: Add link to cat photos -->
       <p>Click here to view more cat photos.</p>
-      <img src="" alt="" />
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
+        alt=""
+      />
     </main>
   </body>
 </html>
