--- a/lesson-01-cat-photo-app/topic-05-main-tag.html
+++ b/lesson-01-cat-photo-app/topic-05-main-tag.html
@@ -3,6 +3,8 @@
     easier to read
     help with Search Engine Optimization (SEO) and accessibility.
 
+    https://stackoverflow.com/questions/40141361/can-i-use-multiple-main-elements-in-a-multipage-document
+    use only 1 main inside document
  -->
 
 <html>
